Update marked to latest
Also fix a couple of warnings from the Analyser.